fix: add word breaking to prevent layout issues on mobile

--- a/src/public/assets/css/global.css
+++ b/src/public/assets/css/global.css
@@ -12,6 +12,7 @@ body {
 h1,
 h2 {
 	margin: 2px 0;
+	word-wrap: break-word;
 }
 
 footer {
